--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -571,39 +571,28 @@ models can be verified.
 
 \subsubsection{Assumptions} \label{sec_assumpt}
 
-\plt{The assumptions are a refinement of the scope.  The scope is general, where
-  the assumptions are specific.  All assumptions should be listed, even those
-  that domain experts know so well that they are rarely (if ever) written down.}
-\plt{The document should not take for granted that the reader knows which
-  assumptions have been made. In the case of unusual assumptions, it is
-  recommended that the documentation either include, or point to, an explanation
-  and justification for the assumption.}
-
-This section simplifies the original problem and helps in developing the
-theoretical model by filling in the missing information for the physical
-system. The numbers given in the square brackets refer to the theoretical model
-  [T], general definition [GD], data definition [DD], instance model [IM], or
-likely change [LC], in which the respective assumption is used.
-
 \begin{itemize}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A1}:]
+\label{A_meaningfulLabel}:]
 {All users are fluent English speakers.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A2}:]
+\label{A_meaningfulLabel}:]
 {The device is to be used under normal daily activities.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A3}:]
+\label{A_meaningfulLabel}:]
 {The device does not have to receive or send data in any wireless manner. It will only have to transfer data through wired connections.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A4}:]
+\label{A_meaningfulLabel}:]
+
 {All patients are to receive verbal instructions from their researcher on how to use their devices.}
 
 \end{itemize}
+
+
 
 \subsubsection{Theoretical Models}\label{sec_theoretical}
 
@@ -1406,6 +1395,26 @@ The following explains the states presented in the above Finite State Machine:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
+\section{Legal and Regulatory Factors}
+
+\begin{itemize}
+\item All collected and analyzed non-medical data shall be protected under the Personal Information Protection and Electronic Documents Act (PIPEDA).
+\item All medical records shall be protected under the Personal Health Information Protection Act (PHIPA).
+\item All patients are to sign a waiver form consenting to the use of their personal information and medical records prior to using the device.
+\item Only those with administrative rights will have access to all data files, all data to be secured with passwords.
+\item Documentation to follow IEEE format for references and citations.
+\item Documentation to be completed with 12pt Arial font on US Letter size paper (8.5" x 11") with 1 inch margin on all sides.
+\item UI implementation to follow ....?
+\end{itemize}
+
+\section{System Boundary Conditions}
+\begin{itemize}
+\item If the device detects abnormally fast and/or large range of sensor input, alert the participant with a prompt: "Irregular activity detected. Press the button to continue".
+\item If the device does not detect any movement for 24 hours straight, then prompt the participant with a question: "Are you still using the device?". If so, simply restart the clock. If no response is given within another 2 hours, power off the device.
+\item If the device reaches 3\% battery life...?
+\end{itemize}
+
+\section{Phase in Plan}
 
 
 
