+Added even more features from the rubric.

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -157,7 +157,7 @@
 \end{tabularx}
 
 ~\newpage
-
+\pagebreak
 \section{Reference Material}
 
 This section records information for easy reference.
@@ -501,10 +501,7 @@ to be owning a phone which could add to the total expenses. The device that we w
 It will be very cheap and specific to the purpose, thus ensuring better performance, and higher reliability.
 \subsubsection{Physical System Description} \label{sec_phySystDescrip}
 
-\begin{center}
-	\includegraphics[]{watch.png}
-\end{center}
-The physical system of the device, as shown in above figure,includes the following elements:
+
 
 \begin{itemize}
 
@@ -1035,7 +1032,8 @@ The following explains the states presented in the above Finite State Machine:
 \newpage
 
 
-
+\section{References}
+N/A
 %\bibliographystyle {plainnat}
 %\bibliography {../../refs/References}
 
