--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -294,7 +294,7 @@ N/A
 
 \section{Introduction}
 
-Researchers at the School of Rehabilitation Sciences (SReS) at McMaster University are investigating treatment strategies for victims of spinal disorders and back pain. Currently, there is great interest in performing Ecological Momentary Assessment (EMA) of those who suffer from back pain and disorders in order to make treatment options more effective. EMA aims to study the thoughts, experiences, and behaviours of a patient's daily life by repeatedly collecting data in an individual's normal environment, at or close to the time they carry out that behaviour.\\
+Researchers at the School of Rehabilitation Sciences (SReS) at McMaster University are investigating treatment strategies for victims of spinal disorders and back pain. Currently, there is great interest in performing Ecological Momentary Assessment (EMA) on those who suffer from back pain and disorders to make treatment options more effective. EMA aims to study the thoughts, experiences, and behaviours of a patient's daily life by repeatedly collecting data in an individual's normal environment, at or close to the time they carry out that behaviour.\\
 
 Specifically, the type of EMA that the SReS is interested in is focused on analyzing the daily activities and symptoms of mostly-older adults with mobility and spinal issues. For example, they may be interested in performing EMA on a patient with spinal compression issues which prevent them from being able to walk long distances without experiencing pain or distress. They wish to track that patient's walking activity as they go about their daily life. If this patient stops walking or moving, they wish to prompt them with questions such as, "Did you stop moving? If so, was it due to pain? Describe your pain, describe which portion of the body it is in." The answers to these questions will be combined with activity monitoring data to form a better picture about the experience this patient has with their spinal and mobility issues.\\
 
@@ -334,7 +334,7 @@ While this document is intended to describe the requirements of the system in as
 
 A reader should have a grasp of software development, electronics, mechanics and dynamics at a level equivalent to a 3rd-Year Mechatronics Undergraduate University student, as well as a basic understanding of human anatomy of which a high school level is adequate. \\
 
-In addition, a reader should have a high-level understanding of Ecological Momentary Assessment. This does not have to be particularly in depth, but a reader should be able to identify the main objectives, practices, and difficulties of performing EMA. Introductory resources related to this can be found here [specify where]. \\
+In addition, a reader should have a high-level understanding of Ecological Momentary Assessment. This does not have to be particularly in depth, but a reader should be able to identify the main objectives, practices, and difficulties of performing EMA. \\
 
 \subsection{Organization of Document}
 This document is organized in a way to make it simple for a reader to understand the essentials regarding the requirements of the system. Should one be interested in gaining a general understanding, it is highly recommended to read this document in its entirety. However, should one wish to learn about specific aspects of this project, please feel free to navigate to any individual section as they are each individually comprehensible. If the reader of this document is a participant in the SReS EMA program, the information relevant is located in sections 2, 3, and 4. If the reader of this document is a researcher performing EMA, the information relevant is located in sections 3, 4, 5, 11, 12, and 13.\\ 
@@ -347,7 +347,7 @@ This document is organized in a way to make it simple for a reader to understand
 \item Stakeholders
 
 	\begin{itemize}
-		\item  Dr. Luciana Macedo of School of Rehabilitation Science at McMaster University (Project Supervisor).
+		\item  Dr. Luciana Macedo of School of Rehabilitation Science at McMaster University (Primary Project Supervisor).
 		\item  Dr. Spencer Smith (Project Supervisor).
 	\end{itemize}
 
@@ -528,24 +528,23 @@ It will be very cheap and specific to the purpose, thus ensuring better performa
 \begin{itemize}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A_meaningfulLabel}:]
+\label{A1}:]
 {All users are fluent English speakers.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A_meaningfulLabel}:]
+\label{A2}:]
 {The device is to be used under normal daily activities.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A_meaningfulLabel}:]
+\label{A3}:]
 {The device does not have to receive or send data in any wireless manner. It will only have to transfer data through wired connections.}
 
 \item[A\refstepcounter{assumpnum}\theassumpnum
-\label{A_meaningfulLabel}:]
+\label{A4}:]
 
 {All patients are to receive verbal instructions from their researcher on how to use their devices.}
 
 \end{itemize}
-
 
 
 \subsubsection{Theoretical Models}\label{sec_theoretical}
@@ -718,7 +717,7 @@ Below are the functional requirements of the device as well as the rationale.
 
 \noindent \begin{itemize}
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Accuracy}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR1}:]
   \textbf{Accuracy:} The accuracy of the data collected during each EMA session by this device must meet the level needed for academic research based on said results. This includes results from sensors capturing participant activity, answers provided by participants from event prompting, timestamps of data inputs, geolocation information, and any other information pertinent to the form of EMA being performed.\\
 
 \underline{Rationale:} Should the EMA data coming from the system be considered inaccurate or incomplete, this system is effectively rendered moot as it is intended to be used in a research setting.\\
@@ -726,7 +725,7 @@ Below are the functional requirements of the device as well as the rationale.
 \underline{Fit Criterion:} The data recorded, stored, and submitted by the system should be accurate to a level considered satisfactory to standard EMA studies conducted by the SReS.\\
 
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Usability}:] \textbf{Usability:} This system should useable by any individual participant who falls within the categeries defined within the user characteristics section of this document. In addition, this system should be easy to set up, monitor, maintain, and reconfigure by any researcher performing EMA using the device.\\
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR2}:] \textbf{Usability:} This system should useable by any individual participant who falls within the categeries defined within the user characteristics section of this document. In addition, this system should be easy to set up, monitor, maintain, and reconfigure by any researcher performing EMA using the device.\\
 
 
 \underline{Rationale:} As many of the participants may be older adults, they may be unfamiliar with modern activity tracking technology. It is unreasoneable to expect such participants to be able to use the functions of this system unless it is explicitly designed to be useable at any level of experience with technology. Also, we don't wanna waste the time of the researchers or introduce unneccessary complexity into operating this system which may introduce erroneous inputs or data interpretations based on confusing interfaces.\\
@@ -734,14 +733,14 @@ Below are the functional requirements of the device as well as the rationale.
 
 \underline{Fit Criterion:} The system's interfaces (both to the researchers and the participants) should fit the guidelines of HCI standards, with an emphasis on making this system more useable for those unfamiliar with modern technology.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Maintainability}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR3}:]
   \textbf{Maintainability:} Once completed, the system should be entirely maintenance free for the time period it is used for EMA (7 to 14 days). The participants should not have perform any maintenance actions at all during this period, and the researchers at most should have to recharge the batteries of the system and update the parameters they set for the next set of EMA.\\
 
 \underline{Rationale:} As many of the participants may be older adults, maintenance of this system may be daunting to those unfamilar with modern technology. In addition, any downtime due to maintenance needs during each EMA period will result in a loss of valuable EMA data.\\
 
 \underline{Fit Criterion:} Once activated, the system should perform all of its functions continuously without error for a period of 7 days.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Portability}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR4}:]
   \textbf{Portability:} The system must be capable of performing its functions of data collection and prompting in any location or situation a participant may find themselves in (within their daily activities). In addition, the system must be constructed in a manner which allows the participant to wear/carry, move, and use the device easily and without hassle.\\
 
 \underline{Rationale:} Ecological Momentary Assessment (EMA) is meant to be performed at almost all points of a participant's daily routine. If the system is bulky, difficult to maneuver around or wear, or heavy, a participant's movement and actions will be hindered and they will be unable to provide EMA data accurately.\\
@@ -750,7 +749,7 @@ Below are the functional requirements of the device as well as the rationale.
 \underline{Fit Criterion:} Has been tested in each individual environment where EMA will be taking place with satisfactory results regarding its portability.\\
 
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Cleanabiity}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR5}:]
   \textbf{Cleanability:} Each portion of this device must be capable of being cleaned, sanitized, and made hygenic before and after each period of EMA which it is used for. As each component of the device is constructed and used in a different manner, the different needs each component has in order to render it clean must be considered as well.\\
 
 
@@ -759,7 +758,7 @@ Below are the functional requirements of the device as well as the rationale.
 \underline{Fit Criterion:} Can be sterilized, cleaned, or treated safely and in a manner satisfactory to the standards of the participants and researchers of the SReS.\\
 
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Safety}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR6}:]
   \textbf{Safety:} The system must be designed in a way which prevents any harm or injury (whether it be physical, emotional, or mental) from coming to the participants as a result of the useage of the device and its information collection methods. This includes physical characteristics which prevent immediate injury (removal of sharp objects, useage of soft materials), physical characteristics which prevent long-term adverse health effects (human-safe materials, safe levels of noise production), or any other considerations that need to be taken in order to prevent harm to the participant.\\
 
 
@@ -767,14 +766,14 @@ Below are the functional requirements of the device as well as the rationale.
 
 \underline{Fit Criterion:} The system conforms to the health and safety standards deemed appropriate by the SReS.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Reusability}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR7}:]
   \textbf{Reusability:} The system must be capable of being reused for an appropriate number of times. This means that the system must be capable of completing its functions without error after each period of EMA without need for significant upkeep other than regular maintenance (charging the battery, cleaning the device, scrubbing data from the system, etc.)\\
 
 \underline{Rationale:} Researchers at the SReS intend to use this system for a vast number of EMA periods, and for multiple different forms of research which EMA may assist with. Thi system must be designed to be able to sustain its functions for whatever purposes and periods of time which the researchers need.\\
 
 \underline{Fit Criterion:} Can be used for 3 consecutive EMA study periods without need for significant maintenance.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Privacy}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR8}:]
   \textbf{Privacy:} This system must protect the data collected from the participants from being accessed or distributed to inappropriate entities or people. \\
 
 
@@ -782,14 +781,14 @@ Below are the functional requirements of the device as well as the rationale.
 
 \underline{Fit Criterion:} Data is collected, distributed, and then erased from the system according to modern data privacy standards.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_Accessibility}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR9}:]
   \textbf{Accessibility:} This device must be accessible to any participant who is partaking in EMA. Regardless of disability, mental or physical status, a participant must be capable of utilizing this device for EMA with the full ability to collect and respond to prompts in accordance with EMA principles. This includes designing the system's phyical portion with accessibility needs in mind, along with designing the system's software, user interface, and data collection portions to allow any participant to be able to use it.\\
 
 \underline{Rationale:} If this device is exclusionary to those with special accessibility needs, then it is severly limited in its use for EMA. According to the user characteristics, this device will mostly be used for those suffering from musculo-skeletal disorders, and many of these participants may be suffering from additional disabilities as well.\\
 
 \underline{Fit Criterion:} The system has been verified to perform in accordance to modern accessibility standards, for both the physical component of the system, and the data collection/software component of the system.\\
 
-\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR_NonDisruptiveness}:]
+\item[NFR\refstepcounter{nfrnum}\thenfrnum \label{NFR10}:]
   \textbf{Non-Disruptiveness:} The system must be designed in a way which allows participants to provide EMA data without significant impact or change to their activities or daily life. This includes bulky constructions which they must spend effort in considering while moving around, significant visual or auditory disruptions which may startle, distract, or annoy participants, embarassing or aesthetically unpleasant constructs, or any other disturbances that they must make considerations for.\\
 
 \underline{Rationale:} It is of paramount importance that this device does not disrupt the daily activities of participants in order to preserve their dignity, and allow them to perform the necessary tasks of their daily lives. In addition, the less the system disrupts their daily activities, the more accurate the picture will be that the system captures of what those daily acitivities are and their relevance to EMA.\\
@@ -797,7 +796,6 @@ Below are the functional requirements of the device as well as the rationale.
 \underline{Fit Criterion:} The system must be rated sufficiently non-disruptive to the daily lives of the participants using the system during testing.\\
 
 \end{itemize}
-
 
 \section{Traceability Matrices and Graphs}
 
@@ -813,29 +811,27 @@ between different requriements and assumptions in the document.
 \begin{landscape}
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c}
 \hline
-	& \aref{A1}& \aref{A2}& \aref{A3}& \aref{A4}& \aref{A5}& \aref{A6}& \aref{A7}& \aref{A8}& \aref{A9}& \aref{A10}& \aref{A11}& \aref{A12}& \aref{A13}& \aref{A14}& \aref{A15}& \aref{A16}& \aref{A17}& \aref{A18}& \aref{A19} \\
-\hline          %   1   2    3   4   5    6   7
-\frref{R1}       &   &   &   & X&   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R2}       &   & X&   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R3}       & X& X&   & X&   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R4}       &   & X&   & X&   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R5}       &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R6}       &   &   & X&   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R7}       & X&   & X&   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R8}       &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R9}       &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\frref{R10}     &   &   &   &   &   &   &   & & & & & & & & & & & &  \\ \hline
-\nfrref{NFR1} &   & X&   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR2} & X& X&   & X&   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR3} &   &   & X&   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR4} &   & X& X&   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR5} &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR6} &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR7} &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR8} &   &   &   &   &   &   &   & & & & & & & & & & & & \\ \hline
-\nfrref{NFR9} &   &   &   &   &   &   &   & & & & & & & & & & & & \\
+	& \aref{A1}& \aref{A2}& \aref{A3}& \aref{A4} \\
+\hline          %   1   2    3   4  
+\frref{R1}       &   &   &   & X  \\ \hline
+\frref{R2}       &   & X&   &    \\ \hline
+\frref{R3}       & X& X&   & X  \\ \hline
+\frref{R4}       &   & X&   & X  \\ \hline
+\frref{R5}       &   &   &   &    \\ \hline
+\frref{R6}       &   &   & X&    \\ \hline
+\frref{R7}       & X&   & X&     \\ \hline
+\nfrref{NFR1} &   & X&   &    \\ \hline
+\nfrref{NFR2} & X& X&   & X \\ \hline
+\nfrref{NFR3} &   &   & X&     \\ \hline
+\nfrref{NFR4} &   & X& X&     \\ \hline
+\nfrref{NFR5} &   X&   &   &      \\ \hline
+\nfrref{NFR6} &   &  X &   &X     \\ \hline
+\nfrref{NFR7} &   &  X &   &     \\ \hline
+\nfrref{NFR8} &  X &   &   &X     \\ \hline
+\nfrref{NFR9} & X  &   &X  &X      \\ \hline
+\nfrref{NFR10}&  & X  &   &      \\
 \hline
 \end{tabular}
 \caption{Traceability Matrix Showing the Connections between Assumptions and Other Items}
@@ -845,25 +841,20 @@ between different requriements and assumptions in the document.
 
 \begin{table}[h!]
 \centering
-\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|c|}
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
 \hline
-	& \frref{R1}& \frref{R2}& \frref{R3}& \frref{R4}& \frref{R5}& \frref{R6}& \frref{R7} &\frref{R8} &\frref{R9}& \frref{R10} \\
+	& \frref{R1}& \frref{R2}& \frref{R3}& \frref{R4}& \frref{R5}& \frref{R6}& \frref{R7} \\
 \hline                    %1   2   3    4   5   6    7   8    9  10  
-\nfrref{NFR1}         &   & X& X&   &   &   & X&   &   &\\ \hline
-\nfrref{NFR2}         & X&   & X& X&  X&   & X&   &   & \\ \hline
-\nfrref{NFR3}         & X&   &   &   &   & X&   &   &   & \\ \hline
-\nfrref{NFR4}         &   & X&   & X&   &   &   &   &   & \\ \hline
-\nfrref{NFR5}         &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR6}         &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR7}         &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR8}         &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR9}         &   &   &   &   &   &   &   &   &   & \\ \hline 
-\nfrref{NFR10}       &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR11}       &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR12}       &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR13}       &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR14}       &   &   &   &   &   &   &   &   &   & \\ \hline
-\nfrref{NFR15}       &   &   &   &   &   &   &   &   &   & \\ 
+\nfrref{NFR1}         &   & X& X&   &   &   & X\\ \hline
+\nfrref{NFR2}         & X&   & X& X&  X&   & X\\ \hline
+\nfrref{NFR3}         & X&   &   &   &   & X&   \\ \hline
+\nfrref{NFR4}         &   & X&   & X&   &   &   \\ \hline
+\nfrref{NFR5}         &   &   &   &  X &   &   &   \\ \hline
+\nfrref{NFR6}         &  X &  X &   &  X &   &   &   \\ \hline
+\nfrref{NFR7}         &   &   &   & X  &   &   &X   \\ \hline
+\nfrref{NFR8}         &   &   X&   &   &   & X  &X   \\ \hline
+\nfrref{NFR9}         &   X&   &   &   &   &   &   \\ \hline 
+\nfrref{NFR10}       &  X &   & X  & X  & X  &   &   \\ 
 \hline
 \end{tabular}
 \caption{Traceability Matrix Showing the Connections Functional Requirements and Non-Functional Requirements}
@@ -876,7 +867,7 @@ what has to be additionally modified if a certain component is changed.  The
 arrows in the graphs represent dependencies. The component at the tail of an
 arrow is depended on by the component at the head of that arrow. Therefore, if a
 component is changed, the components that it points to should also be
-changed. 
+changed.
 
 \section{Development Plan}
 N/A
@@ -1021,14 +1012,12 @@ The following explains the states presented in the above Finite State Machine:
 
 \section{Phase in Plan}
 
-
-
-
-
-
-
-
-
+\begin{itemize}
+\item October 19: R2: Device has to track minor movements of user such that activity is recorded appropriately.\\
+\item October 26: R3: Device has to prompt the user when the software detects no movement has occurred.\\
+\item November 02:  R6: The device will have to store data every time an activity takes place or a prompt is answered on the device by the user.\\
+\item November 06:  R7: The data stored on the device will have to be extracted such that the data is interpretable in the form of graphs and csv.\\
+\end{itemize}
 \newpage
 
 
@@ -1043,17 +1032,68 @@ The information in this section will be used to evaluate the team members on the
 graduate attribute of Lifelong Learning.  Please answer the following questions:
 
 \begin{enumerate}
-  \item What knowledge and skills will the team collectively need to acquire to
+  \item \textit{What knowledge and skills will the team collectively need to acquire to
         successfully complete this capstone project?  Examples of possible knowledge
         to acquire include domain specific knowledge from the domain of your
         application, or software engineering knowledge, mechatronics knowledge or
         computer science knowledge.  Skills may be related to technology, or writing,
         or presentation, or team management, etc.  You should look to identify at
-        least one item for each team member.
-  \item For each of the knowledge areas and skills identified in the previous
+        least one item for each team member.}\\
+
+	As the team is still in the burgeoning phases of this project, it is difficult to ascertain the specific "holes" in the team member's specific skillsets that will need to be filled in order to complete this project successfully. However, the time the team has spent working together in the documentation phase has revealed much about what this team requires in order to succeed. \\
+
+As in many multidisciplinary technical projects, diversity of skills translates to strength. In this case, that diversity stretches past knowledge in dispirate technical fields, and extends to areas such as management and business ideation.\\
+
+Obviously, a mechatronics project involving designing wearable technology like this from the ground up requires skills in \textbf{electronics, software engineering, mechanics, and systems design.} Each of which are shared between the team members. While some team members have some experience in these fields (often through internships where team members delved deep into individual skills), there is still catching up to do in order to have the skills necessary to complete the project. After discussion, the team has decided to split these skills among themselves.\\
+
+It is also essential to this project to hone non-technical skills. Without \textbf{effective project management and git management}, this project will fall apart. Project management in this case refers not only to the soft skills (such as effective communication, risk management, time management, etc.), it also refers to the mindset of a project manager working on an extremely time-sensitive and labour intensive project with limited resources. This mindset is often unfortunately learned through failure and hard lessons learned, but the team hopes to pre-emptively practice and hone this. Regarding git management, git is an incredibly powerful tool. However, it is an incredibly powerful tool with a steep learning curve. While this is a skill which is ideally learned by all, the team has identified a specific git leader to learn the specific nuances of git to keep the team out of trouble. \\
+	
+	These skills-to-be-learned have been split between team members:
+
+	\begin{itemize}
+	\item \textbf{Jessica:} Electronics
+	\item \textbf{Oliver:} Project Management
+	\item \textbf{Jonathan:} Mechanics
+	\item \textbf{Anish:} Software Engineering
+	\item \textbf{Nish:} Systems Design
+	\item \textbf{Labeeb:} Git Nuances
+	\end{itemize}
+  \item \textit{For each of the knowledge areas and skills identified in the previous
         question, what are at least two approaches to acquiring the knowledge or
         mastering the skill?  Of the identified approaches, which will each team
-        member pursue, and why did they make this choice?
+        member pursue, and why did they make this choice?}
+	\begin{itemize}
+	\item \textbf{Electronics:}
+		\begin{enumerate}
+		\item Review the datasheets of microprocessors and circuits previously used in classes.
+		\item Attempt to build simplistic projects from online sources using electronics relevant to this project.
+		\end{enumerate}
+	\item \textbf{Project Management:}
+		\begin{enumerate}
+		\item Chair all meeting going forward.
+		\item Interact with the stakeholders of this project in a leadership role.
+		\end{enumerate}
+	\item \textbf{Mechanics:}
+		\begin{enumerate}
+		\item Attempt to try on existing wearable technology and learn the limitations with current technology.
+		\item Identify and analyze the material properties of common wearable technology and understand the theory behind their specific applications.
+		\end{enumerate}
+	\item \textbf{Software Engineering:}
+		\begin{enumerate}
+		\item Practice with linters, measuring tools for code, and additional software libraries relevant to this project.
+		\item Strictly enforce coding requirements to the rest of the team.
+		\end{enumerate}
+	\item \textbf{Systems Design:}
+		\begin{enumerate}
+		\item Generate "overviews" of the project, its interactions with the world around it, and the relevancy it has to society.
+		\item Simplify all components of the device into a list/diagram which details the interactions each component has with each other and the inputs and outputs of the system.
+		\end{enumerate}
+	\item \textbf{Git Nuances:}
+		\begin{enumerate}
+		\item Be "brave" when it comes to using git, github, git issues, and anything relevant to version control. Try weird things!
+		\item Begin to implement basic CI/CD with git issues, or with an alternative service if necessary.
+		\end{enumerate}
+	\end{itemize}
 \end{enumerate}
 
 \end{document}
