added revision history

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -151,8 +151,7 @@
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
   \toprule {\bf Date} & {\bf Version} & {\bf Notes} \\
   \midrule
-  Date 1              & 1.0           & Notes       \\
-  Date 2              & 1.1           & Notes       \\
+  October 5th, 2022              & 1.0           & Initial Revision       \\
   \bottomrule
 \end{tabularx}
 
