Section 4 Critical Assumptions

--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -68,6 +68,25 @@ minimize the number of assumptions that remove potential hazards.  For instance,
 you could assume a part will never fail, but it is generally better to include
 this potential failure mode.}
 
+\begin{itemize}
+\item All users are fluent in English.
+\begin{itemize}
+\item The device will not have to handle any other languages.
+\end{itemize}
+\item No wireless data transfer required.
+\begin{itemize}
+\item The device operates completely offline, and will not be limited to use in wifi environment.
+\end{itemize}
+\item All participants will receive verbal instructions prior to using the device.
+\begin{itemize}
+\item It is assumed that all users will understand how to enter correct response to each question prompt. Any user inputs will be treated as valid response.
+\end{itemize}
+\item The device is to be used under normal daily activities.
+\begin{itemize}
+\item The device will not have to be designed for extraneous activities outisde of the scope of EMA.
+\end{itemize}
+\end{itemize}
+
 \section{Failure Mode and Effect Analysis}
 
 \wss{Include your FMEA table here}
