--- a/docs/HazardAnalysis/HazardAnalysis.tex
+++ b/docs/HazardAnalysis/HazardAnalysis.tex
@@ -60,8 +60,37 @@ Date2 & Name(s) & Description of changes\\
 \section{Scope and Purpose of Hazard Analysis}
 
 \section{System Boundaries and Components}
+The system consists of several components that make up the entire system
+	\subsection{Battery/Power Management system}
+		This component facilitates stepping down/up the source voltage from the battery to the necessary values required by different parts of the device. Moreover, it consists of a 										charge protection circuit for battery protection (Over-voltage and Discharge). Finally present is a battery level indicator that will generate an alert should the battery life fall below a certain threshold.  
 
-\section{Critical Assumptions}
+	\subsection{Sensor Array system}
+		This component represents all the various sensors that will be used to collect the state information about the user. Also consists of various filters to facilitate smooth and accurate data collection.
+
+	\subsection{Prompt generation system}
+		This component handles  all prompt generation, from the detection of when a prompt occurs, to its specific creation and finally its display on the screen.
+	
+	\subsection{Display System}
+		This system manages all functionality of the device's display, such as prompt display, showing basic user feedback such as date, time, temperature, etc. 
+	
+	\subsection{Data Storage system} 
+		This system handles all logging and storage of data collected by both the sensor array and the prompt generator. Data is stored along with an indication of which system it came from and all prompts will be 				stored with the data and time of entry.
+
+	\subsection{Device Manager}
+		This system handles all connection and communication between the device and the host software.
+	
+	\subsection{Error Handler - Hardware}
+		This component constantly checks the states of every system present and ensures that if any of them fail or return an error, an alert is generated. Moreover the system will also try to fix the problem 					wherever possible.
+
+	\subsection{Error Handler - Software}
+		This component monitors the state of the host software and will attempt to solve any errors that arise and will alert the user should the attempts fail.
+
+	\subsection{Host Software}
+		This system is the primary interface for the researchers to analyze the data collected by the device. It consists of several features that allows the researcher to set different 					
+		thresholds for activity tracking, calibrate all the sensors, update and create new records for participants, and finally interact with the data stored on the device.
+
+	 
+\section{Critical Assumptions }
 
 \wss{These assumptions that are made about the software or system.  You should
 minimize the number of assumptions that remove potential hazards.  For instance,
